minor layout bug fixes

--- a/css/problem0.css
+++ b/css/problem0.css
@@ -29,7 +29,7 @@ html, body {
 	margin-top: 5%;
 	margin-bottom: 5%;
 	background-color: #ffffff;
-	overflow: auto
+	/*overflow: auto;*/
 }
 
 .form_container .form-group {
