--- a/css/problem1.css
+++ b/css/problem1.css
@@ -33,9 +33,12 @@ html, body {
 }
 
 .u_table {
-	width: 93%;
 	margin-left: 30px;
 	margin-right: 30px;
+}
+
+.u_table > .u_thead {
+	width: 132%;
 }
 
 .u_table > .u_thead > .u_tr {
@@ -54,7 +57,8 @@ html, body {
 
 }
 
-.u_tbody {
+.u_table > .u_tbody {
+	width: 132%;
 	background-color: #ddd;
 }
 
@@ -78,6 +82,7 @@ html, body {
 .u_table>.u_tbody>.u_tr>.u_th {
 	font-weight: bold;
 	cursor: move;
+	text-align: right;
 }
 
 .u_table > .u_tbody > .u_tr {
@@ -106,11 +111,17 @@ html, body {
 	border-right: 10px solid #ddd;
 }
 
-.column_header {
-	height: 55px;
-}
-
 .navigate_other {
 	color: #3470d9;
 	margin-right: 50px;
+}
+
+#usersTable {
+	height: 60%;
+	overflow: auto;
+}
+
+#footer {
+	margin-left: 30px;
+	margin-top: 10px;
 }
